--- a/todo
+++ b/todo
@@ -4,7 +4,7 @@
 
 - Proper Style
 - Login/Logout
-- Create/Edit Documents: Markdown input with preview tab. Syntax highlighting. Saving of page. Canceling of page. Input of name/description.
+- Create/Edit Documents: Markdown input with preview tab. Syntax highlighting. Saving of page. Validation. Input of name/description.
 - Delete/Edit. Preview of first lines rendered - Like gists.
 - Update readme.
 - Write a blogpost
@@ -29,3 +29,4 @@
 ## Version 1.1
 - More deployment options, war or similar
 - Project website, documentation etc.
+- Build the thing with travis and add those stickers.
