--- a/todo
+++ b/todo
@@ -6,10 +6,10 @@
 - Login/Logout - CHECK
 - Create/Edit Documents: Markdown input with preview tab. Saving of page. Validation. Input of name/description. - CHECK
 - Delete/Edit. Preview of first lines rendered - Like gists. - CHECK
-- Enable delete button on view page (navigatino doesn't work?)
+- Enable delete button on view page (navigatino doesn't work?) - CHECK
 - Update readme.
-- Write a blogpost
 - check profile (production!), and set version
+- Write a blogpost
 
 ## Version 0.2
 
@@ -22,7 +22,7 @@
 - Place default password on first login, redirect to password reset on first login
 - Screen for document lsit in case there are not entries yet (You have no pages, yet, want to create some?)
 
-## Version 1.0
+## Version 1.0D
 - Full rewrite to kotlin as well as possible
 - Remove all jhipster stuff thats not needed
 - Add docker build
